<resources>
    <string name="app_name">EtOffice</string>
    <string name="title_activity_main">EtOffice</string>
    <string name="error">エラー</string>
    <string name="login">ログイン</string>
    <string name="username">ユーザー名</string>
    <string name="password">パスワード</string>
    <string name="login_registering">登録中....</string>
    <string name="title_home">ホーム</string>
    <string name="title_notifications">メッセージ</string>
    <string name="title_report">日報</string>
    <string name="title_my_page">マイページ</string>
    <string name="title_my_page_change_company">切り替え</string>
    <string name="title_report_detail">日報詳しい</string>
    <string name="title_member_fragment">メンバー</string>
    <string name="change_company_title">切り替え</string>
    <string name="wbs_require">作業コードを選択してください</string>
    <string name="workTime_require">工数を入力してください</string>
    <string name="title_report_add">日報追加</string>
    <string name="project">プロジェクト名</string>
    <string name="selected">選択する</string>
    <string name="wbs_code">作業コード</string>
    <string name="work_time">工数</string>
    <string name="work_place">作業場所</string>
    <string name="submit">登録する</string>
    <string name="report">作業報告</string>
    <string name="time_region">時間帯</string>
    <string name="remind_message">メッセージ</string>
    <string name="remind_content">現在選択されている情報を削除しますか？</string>
    <string name="update_success">更新処理が成功しました。</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="password_require">パスワードを入力してください</string>
    <string name="login_failed_msg2">ログイン失敗しました。</string>
    <string name="workCd_option">工数を選択する</string>
    <string name="select_time">時間を選択する</string>
    <string name="activity_report_detail_予定">予定：</string>
    <string name="activity_report_detail_実績">実績：</string>
    <string name="activity_report_detail_buttom_title">追加する</string>
    <string name="message_send">送信</string>
    <string name="dialog_confirm_title">Confirm</string>
    <string name="dialog_confirm_content">Confirm?</string>
    <string name="dialog_home_report_close">close</string>
    <string name="dialog_home_status_set_user_status">更新</string>
    <string name="dialog_home_status_set_user_location">地名登録</string>
    <string name="dialog_home_status_please_input_location">地名を入力してください。</string>
    <string name="fragment_home_title">ホーム</string>
    <string name="fragment_home_common_function">共通機能</string>
    <string name="fragment_home_visit_record">出勤記録</string>
    <string name="fragment_my_page_name">氏名</string>
    <string name="fragment_my_page_change_company">会社切替</string>
    <string name="fragment_my_page_more"><![CDATA[＞]]></string>
    <string name="fragment_report_all_select">全て選択</string>
    <string name="fragment_report_commit">承認</string>
    <string name="get_user_location_latitude">: latitude:</string>
    <string name="get_user_location_longitude">| longitude:</string>
    <string name="dialog_home_report_title">出勤記録</string>
    <string name="activity_login_user_name_hint">ユーザー名を入力してください</string>
    <string name="copyright_xieyi">Copyright @ 2021 Xieyi</string>
    <string name="dialog_home_status_user_status_memo_hint">備考</string>
    <string name="dialog_home_status_user_location_hint">自宅、カフェ、事務所等</string>
    <string name="fragment_home_on_duty">勤務中</string>
    <string name="fragment_home_outside_duty">勤務外</string>
    <string name="fragment_home_rest">休憩中</string>
    <string name="fragment_home_moving">移動中</string>
    <string name="fragment_home_meeting">会議中</string>
    <string name="HomeReportDialogTag">HomeReportDialog</string>
    <string name="unacknowledged">未承認</string>
    <string name="Approved">承認済み</string>

    <string name="project_title">プロジェクト：</string>
    <string name="wbs_title">作業コード：</string>
    <string name="time_title">工数：</string>
    <string name="memo_title">報告：</string>
    <string name="telephone_call_question">へ電話してよろしいでしょうか</string>
    <string name="telephone_number_call">電話をかける</string>
    <string name="network_no">ネットワークがありません</string>
    <string name="dateformat">%d%02d%02d</string>
    <string name="no_telephone_number">電話番号はありません。</string>



<!--    "PERSONALINFO" = "Personal Info";-->
<!--    "SYSTEM" = "System";-->
<!--    "NAME" = "Name";-->
<!--    "MOBILE" = "Mobile";-->
<!--    "MAIL" = "Mail";-->
<!--    "PLACEMANAGE" = "Place Management";-->
<!--    "SIGNOUT" = "Signout";-->
<!--    "REGIESTERED" = "Registered";-->
<!--    "ALIAS" = "This Location's Alias";-->
<!--    "DELETE" = "Delete";-->
<!--    "CHANGECOMPANY" = "Change Company";-->
<!--    "ARCHIVE" = "Archive";-->

    <!--    MARK: - COMMON-->
    <string name="PERSONALINFO">情報"</string>
    <string name="SYSTEM">システム</string>
    <string name="NAME">名前</string>
    <string name="MOBILE">電話番号</string>
    <string name="MAIL">メール</string>
    <string name="PLACEMANAGE">作業場所管理</string>
    <string name="SIGNOUT">サインアウト</string>
    <string name="REGIESTERED">登録済み</string>
    <string name="ALIAS">この場所のエイリアス</string>
    <string name="DELETE">削除</string>
    <string name="CHANGECOMPANY">会社を切り替え</string>
    <string name="ARCHIVE">アーカイブ</string>

<!--    "ERROR" = "Error";-->
<!--    "MESSAGE" = "Message";-->
<!--    "OK" = "OK";-->
<!--    "CONFIRM" = "Confirm";-->
<!--    "CANCEL" = "Cancel";-->
<!--    "EDIT" = "Edit";-->
<!--    "MSG00" = "Do you want to log out?";-->
<!--    "MSG01" = "Please enter the correct username and password.";-->
<!--    "MSG02" = "Login sucessfully";-->
<!--    "MSG03" = "The input information is incorrect, please re-enter.";-->
<!--    "MSG04" = "Please enter an alias for the current location.";-->
<!--    "MSG05" = "The current network is unavailable, please try again.";-->
<!--    "MSG06" = "Do you want to change the current status?";-->
<!--    "MSG07" = "Unregistered address";-->
<!--    "MSG08" = "Failed to get location information, please give location permission and restart the program.";-->
<!--    "MSG09" = "Please enter the correct alias.";-->
<!--    "MSG10" = "Unknown Status";-->
<!--    "MSG11" = "Please enter the area name.";-->
<!--    "MSG12" = "Please select messages to delete.";-->
<!--    "MSG13" = "Realy to delete the selected messages?";-->
<!--    "MSG14" = "Please select a project name.";-->
<!--    "MSG15" = "Please select a work code";-->
<!--    "MSG16" = "Please input work time.";-->
<!--    "MSG17" = "Message is too long.";-->
<!--    "MSG18" = "Realy to confirm the selected reports?";-->
<!--    "MSG19" = "Please select a report to delete.";-->

    <!--    MARK: - COMMON-->
    <string name="ERROR">エラー</string>
    <string name="MESSAGE">メッセージ</string>
    <string name="OK">ＯＫ</string>
    <string name="CONFIRM">確認</string>
    <string name="CANCEL">キャンセル</string>
    <string name="EDIT">編集</string>
    <string name="MSG00">サインアウトしますか？</string>
    <string name="MSG01">正しいユーザー名とパスワードを入力してください。</string>
    <string name="MSG02">ログイン成功</string>
    <string name="MSG03">データエラー、再試行してください。</string>
    <string name="MSG04">現在地のエイリアスを入力してください。</string>
    <string name="MSG05">現在のネットワークは利用できません。再接続してください。</string>
    <string name="MSG06">現在のステータスを変更しますか？</string>
    <string name="MSG07">未登録作業場所</string>
    <string name="MSG08">位置情報の取得に失敗しました。必ず位置許可を有効にして、プログラムを再起動してください。</string>
    <string name="MSG09">正しいエイリアスを入力してください。</string>
    <string name="MSG10">不明な状態</string>
    <string name="MSG11">地名を入力してください。</string>
    <string name="MSG12">削除するメッセージが選択されていません。</string>
    <string name="MSG13">現在選択されている情報を削除しますか？</string>
    <string name="MSG14">プロジェクト名を選択してください。</string>
    <string name="MSG15">作業コードを選択してください。</string>
    <string name="MSG16">工数を入力してください。</string>
    <string name="MSG17">入力したメッセージが長すぎます。</string>
    <string name="MSG18">現在選択されている情報を承認しますか？</string>
    <string name="MSG19">削除する日報が選択されていません。</string>
</resources>