<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/home_normal"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@mipmap/message_normal"
        android:title="@string/MESSAGE" />
    <item
        android:id="@+id/member_fragment"
        android:icon="@mipmap/member_normal"
        android:title="@string/title_member_fragment" />
    <item
        android:id="@+id/report_fragment"
        android:icon="@mipmap/report_normal"
        android:title="@string/title_report" />
    <item
        android:id="@+id/MyPageFragment"
        android:icon="@mipmap/mypage_normal"
        android:title="@string/title_my_page" />

</menu>