<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.xieyi.etoffice.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.xieyi.etoffice.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/member_fragment"
        android:name="com.xieyi.etoffice.ui.member.MemberFragment"
        android:label="@string/title_member_fragment"
        tools:layout="@layout/fragment_member" />
    <fragment
        android:id="@+id/ScrollingFragmentReport"
        android:name="com.xieyi.etoffice.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_scrolling_report" />
    <fragment
        android:id="@+id/MyPageFragment"
        android:name="com.xieyi.etoffice.ui.MyPage.MyPageFragment"
        android:label="@string/title_my_page"
        tools:layout="@layout/fragment_my_page" />

    //特定fragment
    <fragment
        android:id="@+id/MyPagePlaceSettingFragment"
        android:name="com.xieyi.etoffice.ui.MyPage.MyPagePlaceSettingFragment"
        android:label="@string/title_my_page_place_setting"
        tools:layout="@layout/activity_my_page_place_setting" />
    <fragment
        android:id="@+id/MyPageChangeCompanyFragment"
        android:name="com.xieyi.etoffice.ui.MyPage.MyPageChangeCompanyFragment"
        android:label="@string/title_my_page_change_company"
        tools:layout="@layout/activity_my_page_change_company" />
    <fragment
        android:id="@+id/ReportDetail"
        android:name="com.xieyi.etoffice.ui.report.ReportDetailFragment"
        android:label="@string/title_report_detail"
        tools:layout="@layout/activity_report_detail" />
</navigation>