<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="400dp"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_round_edge_grey"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/MOBILE"
            android:textSize="15dp"
            android:textStyle="bold"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/iphone_line_bg_dark"/>
        <TextView
            android:id="@+id/call_tel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/dialog_home_report_title"
            android:textSize="20dp"
            android:textColor="@color/iphone_button_color"
            android:gravity="center"
            />
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/ic_round_edge_grey"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_save_and_close"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/CANCEL"
                android:textSize="20dp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/iphone_button_color"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
