<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportFragment"
    android:background="@color/f0f0f0">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/md_blue_500"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <LinearLayout
                android:id="@+id/topLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/all_select"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fragment_report_all_select"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                        >
                    <TextView
                        android:id="@+id/commit"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fragment_report_commit"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/title"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:text="@string/title_report"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="right|center"
                    >
                    <ImageView
                        android:id="@+id/people"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="right|center"
                        android:src="@android:drawable/btn_star_big_on" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/edit"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fragment_report_edit"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_get_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



</androidx.constraintlayout.widget.ConstraintLayout>