<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.ReportDetailActivity"
    android:background="#E8E8E8">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/md_blue_500"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/returnHome"
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="30dp"
                        android:gravity="center"
                        app:srcCompat="?attr/homeAsUpIndicator" />
                    <TextView
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:text="@string/title_report"
                        android:textSize="20sp"
                        android:textColor="#FFFFFF"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="1dp"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        />
                </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollViewContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--内容-->
            <LinearLayout
                android:id="@+id/record_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">
        <!--        date-->
                <TextView
                    android:id="@+id/record_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_round_edge_grey"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />
        <!--        予定：-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/f0f0f0"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:gravity="center|left"
                        android:text="@string/activity_report_detail_予定"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/appointment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:gravity="center|left"
                        android:text="予定内容"
                        android:textColor="#000000"/>
                </LinearLayout>


    <!--            planworklist-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_planworklist"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:gravity="center"
                    app:layoutManager="LinearLayoutManager" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:gravity="center"
                    android:background="#9F9F9F"
                    android:orientation="horizontal">
                </LinearLayout>

        <!--        実績：-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/f0f0f0"
                    android:padding="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:gravity="center|left"
                        android:text="@string/activity_report_detail_実績"
                        android:textColor="#000000"/>
                    <TextView
                        android:id="@+id/worktime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:gravity="center|left"
                        android:text="実績内容"
                        android:textColor="#000000"/>
                </LinearLayout>


                <!--        workstatuslis -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_workstatuslist"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    app:layoutManager="LinearLayoutManager" />





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <!--                add button-->
                    <LinearLayout
                        android:gravity="center"
                        android:background="@drawable/ic_round_edge_grey"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:orientation="vertical">
                        <ImageView
                            android:id="@+id/addView"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:gravity="center"
                            app:srcCompat="@drawable/ic_baseline_add_circle_outline_24" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_report_detail_buttom_title"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:gravity="center"
                            />
                    </LinearLayout>

                    <!--        reportlist -->
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_reportlist"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        app:layoutManager="LinearLayoutManager" />
                </LinearLayout>


                <!--        commentlist -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_commentlist"
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:gravity="center"
                    app:layoutManager="LinearLayoutManager" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:orientation="vertical"/>
            </LinearLayout>
            <!--内容-->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:gravity="center|bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#DDDFDFDF"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/message_edit"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/white"
                android:ems="50"
                android:inputType="textPersonName"/>

            <Button
                android:id="@+id/message_send"
                android:layout_width="1dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:text="@string/message_send"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>